integrate eriks consequence module