@@ -1,9 +1,14 @@
 package dk.sfs.riskengine.ais;
 
+import java.util.Calendar;
+
 import java.util.Collection;
 import java.util.Date;
+import java.util.GregorianCalendar;
 import java.util.HashMap;
 import java.util.Map;
+
+import org.apache.log4j.Logger;
 
 import dk.frv.ais.geo.GeoLocation;
 import dk.frv.ais.message.AisMessage18;
@@ -11,26 +16,34 @@ import dk.frv.ais.message.AisMessage5;
 import dk.frv.ais.message.AisPosition;
 import dk.frv.ais.message.AisPositionMessage;
 import dk.frv.ais.message.ShipTypeCargo;
-import dk.sfs.riskengine.Collision;
-import dk.sfs.riskengine.FireExplosion;
-import dk.sfs.riskengine.Foundering;
-import dk.sfs.riskengine.HullFailure;
-import dk.sfs.riskengine.MachineryFailure;
-import dk.sfs.riskengine.StrandedByMachineFailure;
-import dk.sfs.riskengine.StrandedByNavigationError;
+import dk.sfs.riskengine.consequence.Consequence;
+import dk.sfs.riskengine.consequence.Ship;
+import dk.sfs.riskengine.consequence.Ship.PolutionType;
 import dk.sfs.riskengine.geometry.CPA;
 import dk.sfs.riskengine.geometry.Point2d;
+import dk.sfs.riskengine.index.Collision;
+import dk.sfs.riskengine.index.FireExplosion;
+import dk.sfs.riskengine.index.Foundering;
+import dk.sfs.riskengine.index.HullFailure;
+import dk.sfs.riskengine.index.MachineryFailure;
+import dk.sfs.riskengine.index.StrandedByMachineFailure;
+import dk.sfs.riskengine.index.StrandedByNavigationError;
+import dk.sfs.riskengine.index.IncidentType.AccidentType;
 import dk.sfs.riskengine.metoc.Metoc;
 import dk.sfs.riskengine.persistence.domain.RiskIndexes;
 import dk.sfs.riskengine.persistence.domain.Vessel;
+import dk.sfs.riskengine.persistence.domain.Vessel.ShipTypeIwrap;
 
 public class RiskTarget {
 
 	private static final long CAL_PERIOD = 5 * 60l * 1000l; // 5 min
 
+	private static final Logger log = Logger.getLogger(RiskTarget.class);
+
 	private Long mmsi;
 	private Long imo;
 	private Vessel staticInfo;
+	private Double actualDraught;
 	private AisPosition pos;
 	/*
 	 * Compass
@@ -42,45 +55,77 @@ public class RiskTarget {
 	private Double sog;
 	private long lastUpdated = 0;
 
-	
 	private Point2d positionVector;
 	/*
 	 * m/s - cartesian
 	 */
 	private Point2d speedVector;
 
-	
 	private RiskTarget cpaTarget;
-	private double cpaTime;
-	private double cpa; 
+	private Double cpaTime;
+	private Double cpa;
 
 	public RiskTarget(AisPositionMessage msg) {
 		super();
 		mmsi = msg.getUserId();
+		/*
+		 * try to get the vessel static info from loyds table.
+		 */
+		this.staticInfo = Vessel.getByMmsi(mmsi);
+		if (staticInfo == null) {
+			log.debug("static info not found for mmsi " + mmsi);
+			
+		}
+		
 	}
 
 	public boolean hasStaticInfo() {
 		return staticInfo != null;
 	}
 
+	/**
+	 * @param msg
+	 */
 	public void setStaticInfo(AisMessage5 msg) {
+
+		actualDraught = new Double(msg.getDraught());
 		/*
-		 * try to get from Loyds with imo number
+		 * get info from Loyds table with imo number
 		 */
-
-		this.staticInfo = Vessel.getByImo(msg.getImo());
 		imo = msg.getImo();
+		Vessel tmp = Vessel.getByImo(imo);
 
+		if (tmp == null) {
+			log.debug("static info not found for imo" + imo);
+			// TODO trust mmsi ?
+		} else if (staticInfo != null && staticInfo.getMmsi() != mmsi) {
+			log.debug("mmsi - imo dont match. mmsi/imo:" + mmsi + "/" + imo);
+			/*
+			 * mmsi from loyds dont match mmsi i AIS. Update staticInfo.
+			 */
+			staticInfo = tmp;
+			staticInfo.updateMmsiforImo();
+		}
+		
+		/*
+		 * No static info from loyds, take from Ais 
+		 */
 		if (staticInfo == null) {
-			staticInfo = new Vessel();
+			log.debug("static info not found for  mmsi/imo:" + mmsi + "/" + imo);
+
 			/*
 			 * Take info from ais msg but no flag and no yearOfBuild
 			 */
-			staticInfo.setDraught(new Double(msg.getDraught()));
-			// TODO find shipTypeIwarp from ais type
-			staticInfo.setShipTypeIwrap(new ShipTypeCargo(msg.getShipType()).getShipType().name());
-			staticInfo.setLength(Double.valueOf(msg.getDimBow() + msg.getDimStern()));
-			staticInfo.setNameOfShip(msg.getName());
+			
+			int length = msg.getDimBow() + msg.getDimStern();
+			if (length > 0) {
+
+				staticInfo = new Vessel();
+				staticInfo.setLength(Double.valueOf(length));
+				staticInfo.setShipTypeIwrap(ShipTypeIwrap.getShipTypeFromAisType(
+						new ShipTypeCargo(msg.getShipType()).getShipType(), length));
+				staticInfo.setNameOfShip(msg.getName());
+			}
 		}
 	}
 
@@ -89,7 +134,7 @@ public class RiskTarget {
 		positionVector = CPA.getPositionVector(pos.getGeoLocation());
 	}
 
-	public String getShipTypeIwrap() {
+	public ShipTypeIwrap getShipTypeIwrap() {
 		return staticInfo.getShipTypeIwrap();
 	}
 
@@ -109,12 +154,12 @@ public class RiskTarget {
 		return staticInfo.getFlag();
 	}
 
-	public long getLongitude() {
-		return pos.getLongitude();
+	public double getLongitude() {
+		return pos.getGeoLocation().getLongitude();
 	}
 
-	public long getLatitude() {
-		return pos.getLatitude();
+	public double getLatitude() {
+		return pos.getGeoLocation().getLatitude();
 	}
 
 	public GeoLocation getGeoLocation() {
@@ -148,50 +193,30 @@ public class RiskTarget {
 
 	public void updateRiskIndexes() {
 
+		if (!hasStaticInfo()) {
+			return;
+		}
 		Metoc metoc = Metoc.getMetocForPosition(pos.getGeoLocation());
 
-		RiskIndexes risk = new RiskIndexes();
-		risk.setMmsi(mmsi.intValue());
-
-		// TODO do some to avoid creation of new object
-
-		risk.setFireExplosion(new FireExplosion(metoc, this).getTotalRisk());
-		risk.setMachineryFailure(new MachineryFailure(metoc, this).getTotalRisk());
+		/*
+		 * Fire explosion
+		 */
+		new FireExplosion(metoc, this).save();
+		new MachineryFailure(metoc, this).save();
 
 		if (hasStaticInfo()) {
 			// requires static info
-			risk.setStrandedByMachineFailure(new StrandedByMachineFailure(metoc, this).getTotalRisk());
-			risk.setStrandedByNavigationError(new StrandedByNavigationError(metoc, this).getTotalRisk());
+			new StrandedByMachineFailure(metoc, this).save();
+			new StrandedByNavigationError(metoc, this).save();
 		}
+		new MachineryFailure(metoc, this).save();
+		new HullFailure(metoc, this).save();
+		new Foundering(metoc, this).save();
 
-		risk.setMachineryFailure(new MachineryFailure(metoc, this).getTotalRisk());
-		risk.setHullFailure(new HullFailure(metoc, this).getTotalRisk());
-		risk.setFoundering(new Foundering(metoc, this).getTotalRisk());
-
-		if (cpaTarget != null) {
-			risk.setCollision(new Collision(metoc, this, cpa, cpaTime).getTotalRisk());
-
-			risk.setCpaTargetMmsi(cpaTarget.getMmsi());
-			risk.setCpaTime(cpaTime);
-			risk.setCpaDist(cpa);
-			
-			risk.setCpaCog(cpaTarget.cog);
-			risk.setCpaSog(cpaTarget.sog);
-			risk.setCpaLat(cpaTarget.pos.getGeoLocation().getLatitude());
-			risk.setCpaLon(cpaTarget.pos.getGeoLocation().getLongitude());
+		if (cpaTarget != null && cpaTarget.hasStaticInfo()) {
+			Collision col = new Collision(metoc, this, cpa, cpaTime, cpaTarget);
+			col.save();
 		}
-		risk.setDateTimeCreated(new Date());
-		if (staticInfo != null) {
-			risk.setStaticInfo(staticInfo);
-		}
-		risk.setCog(cog);
-		risk.setSog(sog);
-		risk.setLat(pos.getGeoLocation().getLatitude());
-		risk.setLon(pos.getGeoLocation().getLongitude());
-		
-		// save in db
-		risk.save();
-
 	}
 
 	public void updateCollisionTarget(Collection<RiskTarget> targetCollection) {
@@ -215,13 +240,25 @@ public class RiskTarget {
 				}
 			}
 		}
-		if(cpaTarget!=null){
-		cpa = CPA.cpa_distance(positionVector, speedVector, cpaTarget.getPositionVector(), cpaTarget.getSpeedVector(),
-				cpaTime);
+
+		if (cpaTime < 900) {
+			/*
+			 * cpatime < 900s calculate cpa.
+			 */
+			cpa = CPA.cpa_distance(positionVector, speedVector, cpaTarget.getPositionVector(),
+					cpaTarget.getSpeedVector(), cpaTime);
 		}
-		
+
+		if (cpa == null || cpa > 500) {
+			/*
+			 * cpa > 500 m, not a problem, reset cpaTarget.
+			 */
+			cpaTarget = null;
+			cpaTime = Double.POSITIVE_INFINITY;
+		}
+
 	}
-	
+
 	public Long getMmsi() {
 		return mmsi;
 	}
@@ -233,4 +270,38 @@ public class RiskTarget {
 	public Point2d getSpeedVector() {
 		return speedVector;
 	}
+
+	public Ship getConsequenceShip() {
+		Ship ship1 = new Ship();
+		ship1.shiptype = staticInfo.getShipTypeIwrap();
+		Calendar cal = new GregorianCalendar();
+		ship1.age = cal.get(Calendar.YEAR) - staticInfo.getYearOfBuild();
+		ship1.loa = staticInfo.getLength(); // m
+		ship1.breadth = staticInfo.getBreadth(); // m
+		ship1.designDraught = staticInfo.getDraught();
+		ship1.draught = actualDraught;
+
+		ship1.deadweight = staticInfo.getDeadweight();
+		ship1.grossTonnage = staticInfo.getGt();
+		ship1.numberOfPersons = staticInfo.getPassengers();
+		ship1.designSpeed = staticInfo.getSpeed();
+		ship1.speed = sog; // knots
+		ship1.valueOfShip = staticInfo.getNewbuildingPrice();
+
+		return ship1;
+	}
+
+	public Double getActualDraught() {
+		return actualDraught;
+	}
+
+	public void setActualDraught(double actualDraught) {
+		this.actualDraught = actualDraught;
+	}
+
+	public String getNameOfShip() {
+		return staticInfo.getNameOfShip();
+	}
+
+	
 }
